--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Zachariah's and Claire's Wedding Website">
         <title>Zachariah & Claire 2024</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./Styles/home.css">
     </head>
     <body>
         <!-- Menu section -->
@@ -17,7 +17,7 @@
                     <li><a href="./gallary.html">Gallary</a></li>
                     <li><a href="./info.html">Information</a></li>
                     <li><a href="./registry.html">Gifts & Funds</a></li>
-                    <li><a href="./rsvp.html">RSVP</a></li>
+                    <li class="rsvp"><a href="./rsvp.html">RSVP</a></li>
                 </ul>
             </nav>
         </header>
