--- a/home.html
+++ b/home.html
@@ -6,18 +6,15 @@
         <meta name="description" content="Zachariah's and Claire's Wedding Website">
         <title>Zachariah & Claire 2024</title>
         <link rel="stylesheet" href="./Styles/home.css">
+        <script src="./Scripts/script.js"></script>
     </head>
     <body>
         <!-- Menu section -->
         <header> 
             <nav>
                 <ul>
-                    <li><a href="./home.html">Home</a></li>
-                    <li><a href="./story.html">Our Story</a></li>
-                    <li><a href="./gallary.html">Gallary</a></li>
-                    <li><a href="./info.html">Information</a></li>
-                    <li><a href="./registry.html">Gifts & Funds</a></li>
-                    <li class="rsvp"><a href="./rsvp.html">RSVP</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#story">Our Story</a></li>
                 </ul>
             </nav>
         </header>
@@ -27,6 +24,10 @@
             <h3>We're getting married!</h2>
             <h1>Zachariah & Claire</h1>
             <h3>11-August-1111</h2>
+        </section>
+
+        <section id="story">
+            <h2>Our Story</h2>
         </section>
 
         <!-- Footer Section -->
