--- a/home.html
+++ b/home.html
@@ -5,29 +5,46 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Zachariah's and Claire's Wedding Website">
         <title>Zachariah & Claire 2024</title>
+        
+        <link rel="stylesheet" href="./Styles/nav_bar.css">
         <link rel="stylesheet" href="./Styles/home.css">
-        <script src="./Scripts/script.js"></script>
+        <link rel="stylesheet" href="./Styles/story.css">
+
+        <script src="./Scripts/scroll.js"></script>
     </head>
     <body>
         <!-- Menu section -->
-        <header> 
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#story">Our Story</a></li>
-                </ul>
-            </nav>
-        </header>
+        <header>
+                <nav>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#story">Our Story</a></li>
+                        <li class="dropdown">
+                            <a href="#info">Information</a>
+                            <ul class="dropdown-content">
+                                <li><a href="#info">Schedule</a></li>
+                                <li><a href="#info">Venue</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+          </header>
 
-        <!-- Hero Section -->
+        <!-- Home screen section -->
         <section id="home">
             <h3>We're getting married!</h2>
             <h1>Zachariah & Claire</h1>
             <h3>11-August-1111</h2>
         </section>
 
+        <!-- Our story with indiviual stories -->
         <section id="story">
             <h2>Our Story</h2>
+        </section>
+
+        <!-- Information section about venue and schedule -->
+        <section id="info">
+            <h2>Information</h2>
         </section>
 
         <!-- Footer Section -->
