updated nav bar and included slide show

--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="./Styles/story.css">
 
         <script src="./Scripts/scroll.js"></script>
+        <script src="./Scripts/slideshow.js"></script>
     </head>
     <body>
         <!-- Menu section -->
@@ -32,9 +33,18 @@
 
         <!-- Home screen section -->
         <section id="home">
-            <h3>We're getting married!</h2>
+            <h2>We're getting married!</h2>
             <h1>Zachariah & Claire</h1>
-            <h3>11-August-1111</h2>
+            <h2>11-August-1111</h2>
+
+            <!-- Slideshow on the right -->
+            <div class="slideshow-container">
+                <div class="slideshow">
+                    <img class="slide" src="./Images/image1.jpg" alt="Image 1">
+                    <img class="slide" src="./Images/image2.jpg" alt="Image 2">
+                    <img class="slide" src="./Images/image3.jpg" alt="Image 3">
+                </div>
+            </div>
         </section>
 
         <!-- Our story with indiviual stories -->
@@ -53,8 +63,5 @@
                 &copy; Zachariah's & Clarie's Wedding. All rights reserved.
             </p>
         </footer>
-
-        <!-- Add your JavaScript files here if needed -->
-
     </body>
 </html>
