Made a photo the entire home screen

--- a/home.html
+++ b/home.html
@@ -11,7 +11,6 @@
         <link rel="stylesheet" href="./Styles/story.css">
 
         <script src="./Scripts/scroll.js"></script>
-        <script src="./Scripts/slideshow.js"></script>
     </head>
     <body>
         <!-- Menu section -->
@@ -20,13 +19,7 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#story">Our Story</a></li>
-                        <li class="dropdown">
-                            <a href="#info">Information</a>
-                            <ul class="dropdown-content">
-                                <li><a href="#info">Schedule</a></li>
-                                <li><a href="#info">Venue</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#info">Information</a></li>
                     </ul>
                 </nav>
           </header>
@@ -36,15 +29,6 @@
             <h2>We're getting married!</h2>
             <h1>Zachariah & Claire</h1>
             <h2>11-August-1111</h2>
-
-            <!-- Slideshow on the right -->
-            <div class="slideshow-container">
-                <div class="slideshow">
-                    <img class="slide" src="./Images/image1.jpg" alt="Image 1">
-                    <img class="slide" src="./Images/image2.jpg" alt="Image 2">
-                    <img class="slide" src="./Images/image3.jpg" alt="Image 3">
-                </div>
-            </div>
         </section>
 
         <!-- Our story with indiviual stories -->
