started working on story page

--- a/home.html
+++ b/home.html
@@ -9,31 +9,48 @@
         <link rel="stylesheet" href="./Styles/nav_bar.css">
         <link rel="stylesheet" href="./Styles/home.css">
         <link rel="stylesheet" href="./Styles/story.css">
+        <link rel="stylesheet" href="./Styles/info.css">
 
         <script src="./Scripts/scroll.js"></script>
+        <script src="./Scripts/home_text_fade.js"></script>
     </head>
     <body>
         <!-- Menu section -->
-        <header>
-                <nav>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#story">Our Story</a></li>
-                        <li><a href="#info">Information</a></li>
-                    </ul>
-                </nav>
-          </header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#story">Our Story</a></li>
+                <li><a href="#info">Information</a></li>
+            </ul>
+        </nav>
 
         <!-- Home screen section -->
         <section id="home">
-            <h2>We're getting married!</h2>
             <h1>Zachariah & Claire</h1>
-            <h2>11-August-1111</h2>
+            <h2>11 August 2024</h2>
         </section>
 
         <!-- Our story with indiviual stories -->
         <section id="story">
             <h2>Our Story</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id pellentesque elit. 
+                Fusce imperdiet molestie tortor, non tempor velit ultricies eu. In hac habitasse platea dictumst. 
+                Donec scelerisque leo venenatis porttitor mattis. Nunc diam diam, sodales porta mattis sed, fermentum a quam. 
+                Aliquam ultricies neque quam, eu dignissim magna cursus ut. Nulla tempor porta pharetra. 
+                Aenean velit ante, pulvinar quis ipsum in, lacinia tempus velit. Phasellus velit metus, egestas id libero quis, blandit tincidunt dui. 
+                Donec ipsum elit, mollis in molestie eget, faucibus vitae turpis. Nunc facilisis pretium pulvinar. Sed malesuada mollis gravida. 
+                Quisque consequat augue urna, sit amet bibendum libero vehicula malesuada. 
+                <br>
+                <br>
+                Aliquam tempor arcu at magna pulvinar congue. Donec congue ultricies urna, quis finibus dui lacinia vel. 
+                Suspendisse maximus, orci vitae pellentesque volutpat, metus nisl mattis nisi, sit amet ultricies urna nibh nec ligula. 
+                Nulla facilisi. Duis enim neque, interdum sit amet lorem sit amet, commodo faucibus felis. Praesent sodales eleifend purus a molestie. 
+                Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam eget ligula mi. 
+                In sagittis molestie risus eu sodales. Duis venenatis felis non hendrerit dignissim. 
+                Sed ex metus, pretium lacinia augue non, congue dictum metus. Suspendisse porta semper tellus, rutrum euismod nisl volutpat in. 
+                Aenean malesuada a massa ut volutpat. 
+            </p>
         </section>
 
         <!-- Information section about venue and schedule -->
