--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link rel="stylesheet" href="./Styles/home.css">
         <link rel="stylesheet" href="./Styles/story.css">
         <link rel="stylesheet" href="./Styles/info.css">
+        <link rel="stylesheet" href="./Styles/gallary.css">
+        <link rel="stylesheet" href="./Styles/gifts.css">
+        <link rel="stylesheet" href="./Styles/rsvp.css">
 
         <script src="./Scripts/scroll.js"></script>
         <script src="./Scripts/home_text_fade.js"></script>
@@ -21,6 +24,9 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#story">Our Story</a></li>
                 <li><a href="#info">Information</a></li>
+                <li><a href="#gallary">Gallary</a></li>
+                <li><a href="#gifts">Fund & Gifts</a></li>
+                <li><a href="#rsvp">RSVP</a></li>
             </ul>
         </nav>
 
@@ -31,7 +37,7 @@
         </section>
 
         <!-- Our story with indiviual stories -->
-        <section id="story">
+        <section id="story" class="borderimg">
             <h2>Our Story</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id pellentesque elit. 
@@ -58,10 +64,25 @@
             <h2>Information</h2>
         </section>
 
+        <!-- Display of our engagement photos -->
+        <section id="gallary">
+            <h2>Gallary</h2>
+        </section>
+
+        <!-- Links to our fund and amazon gift selection -->
+        <section id="gifts">
+            <h2>Fund & Gifts</h2>
+        </section>
+
+        <!-- Allows an invitee to rsvp -->
+        <section id="rsvp">
+            <h2>RSVP</h2>
+        </section>
+
         <!-- Footer Section -->
         <footer>
             <p>
-                &copy; Zachariah's & Clarie's Wedding. All rights reserved.
+                &copy; Zachariah's & Clarie's Wedding. All rights reserved. Created by Zachariah.
             </p>
         </footer>
     </body>
