--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
         <link rel="stylesheet" href="./Styles/gallary.css">
         <link rel="stylesheet" href="./Styles/gifts.css">
         <link rel="stylesheet" href="./Styles/rsvp.css">
+        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 
         <script src="./Scripts/scroll.js"></script>
         <script src="./Scripts/home_text_fade.js"></script>
+        <script src="./Scripts/menu_button.js"></script>
     </head>
-    <body>
-        <!-- Menu section -->
+    <body style="margin: 0; padding: 0;">
+        <!-- Menu (and button) -->
+        <button id="menu-button">
+            <i class="fas fa-bars"></i>
+        </button>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -39,24 +45,27 @@
         <!-- Our story with indiviual stories -->
         <section id="story" class="borderimg">
             <h2>Our Story</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id pellentesque elit. 
-                Fusce imperdiet molestie tortor, non tempor velit ultricies eu. In hac habitasse platea dictumst. 
-                Donec scelerisque leo venenatis porttitor mattis. Nunc diam diam, sodales porta mattis sed, fermentum a quam. 
-                Aliquam ultricies neque quam, eu dignissim magna cursus ut. Nulla tempor porta pharetra. 
-                Aenean velit ante, pulvinar quis ipsum in, lacinia tempus velit. Phasellus velit metus, egestas id libero quis, blandit tincidunt dui. 
-                Donec ipsum elit, mollis in molestie eget, faucibus vitae turpis. Nunc facilisis pretium pulvinar. Sed malesuada mollis gravida. 
-                Quisque consequat augue urna, sit amet bibendum libero vehicula malesuada. 
-                <br>
-                <br>
-                Aliquam tempor arcu at magna pulvinar congue. Donec congue ultricies urna, quis finibus dui lacinia vel. 
-                Suspendisse maximus, orci vitae pellentesque volutpat, metus nisl mattis nisi, sit amet ultricies urna nibh nec ligula. 
-                Nulla facilisi. Duis enim neque, interdum sit amet lorem sit amet, commodo faucibus felis. Praesent sodales eleifend purus a molestie. 
-                Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam eget ligula mi. 
-                In sagittis molestie risus eu sodales. Duis venenatis felis non hendrerit dignissim. 
-                Sed ex metus, pretium lacinia augue non, congue dictum metus. Suspendisse porta semper tellus, rutrum euismod nisl volutpat in. 
-                Aenean malesuada a massa ut volutpat. 
-            </p>
+            <div class="story-content">
+                <img src="Images/story.JPG" alt="Story Image" class="arch-frame">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id pellentesque elit. 
+                    Fusce imperdiet molestie tortor, non tempor velit ultricies eu. In hac habitasse platea dictumst. 
+                    Donec scelerisque leo venenatis porttitor mattis. Nunc diam diam, sodales porta mattis sed, fermentum a quam. 
+                    Aliquam ultricies neque quam, eu dignissim magna cursus ut. Nulla tempor porta pharetra. 
+                    Aenean velit ante, pulvinar quis ipsum in, lacinia tempus velit. Phasellus velit metus, egestas id libero quis, blandit tincidunt dui. 
+                    Donec ipsum elit, mollis in molestie eget, faucibus vitae turpis. Nunc facilisis pretium pulvinar. Sed malesuada mollis gravida. 
+                    Quisque consequat augue urna, sit amet bibendum libero vehicula malesuada. 
+                    <br>
+                    <br>
+                    Aliquam tempor arcu at magna pulvinar congue. Donec congue ultricies urna, quis finibus dui lacinia vel. 
+                    Suspendisse maximus, orci vitae pellentesque volutpat, metus nisl mattis nisi, sit amet ultricies urna nibh nec ligula. 
+                    Nulla facilisi. Duis enim neque, interdum sit amet lorem sit amet, commodo faucibus felis. Praesent sodales eleifend purus a molestie. 
+                    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam eget ligula mi. 
+                    In sagittis molestie risus eu sodales. Duis venenatis felis non hendrerit dignissim. 
+                    Sed ex metus, pretium lacinia augue non, congue dictum metus. Suspendisse porta semper tellus, rutrum euismod nisl volutpat in. 
+                    Aenean malesuada a massa ut volutpat. 
+                </p>
+            </div>
         </section>
 
         <!-- Information section about venue and schedule -->
