--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="./Styles/gallary.css">
         <link rel="stylesheet" href="./Styles/gifts.css">
         <link rel="stylesheet" href="./Styles/rsvp.css">
+        <link rel="stylesheet" href="./Styles/fonts.css">
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 
