--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <!-- Home screen section -->
         <section id="home">
-            <h1>Zachariah & Claire</h1>
+            <h1>ZACHARIAH<br>+  CLAIRE</h1>
             <h2>11 August 2024</h2>
         </section>
 
@@ -47,7 +47,7 @@
         <section id="story" class="borderimg">
             <h2>Our Story</h2>
             <div class="story-content">
-                <img src="Images/story.JPG" alt="Story Image" class="arch-frame">
+                <img src="Images/story2.JPG" alt="Story Image" class="arch-frame">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id pellentesque elit. 
                     Fusce imperdiet molestie tortor, non tempor velit ultricies eu. In hac habitasse platea dictumst. 
