--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#story">Our Story</a></li>
                 <li><a href="#info">Information</a></li>
-                <li><a href="#Gallery">Gallery</a></li>
+                <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#gifts">Fund & Gifts</a></li>
                 <li><a href="#rsvp">RSVP</a></li>
             </ul>
@@ -215,42 +215,57 @@
         <section id="gallery">
             <h2>Gallery</h2>
             <div class="button-container">
-                <button class="gallery-button" onclick="showOneColumn()">1</button>
+                <button class="gallery-button" onclick="showFourColumns()">4</button>         
                 <button class="gallery-button" onclick="showTwoColumns()">2</button>
-                <button class="gallery-button" onclick="showThreeColumns()">3</button>         
+                <button class="gallery-button" onclick="showOneColumn()">1</button>
             </div>   
             <p class="button-note">
                 Select the number of columns to be displayed
             </p>
             <div class="gallery-row"> 
                 <div class="gallery-column">
-                    <img src="Images/Gallery/g11.JPG">
-                    <img src="Images/Gallery/g2.JPG">
-                    <img src="Images/Gallery/g3.JPG">
-                    <img src="Images/Gallery/g13.JPG">
-                    <img src="Images/Gallery/g9.JPG">
+                    <img src="Images/Gallery/P1.JPG">
+                    <img src="Images/Gallery/P14.JPG">
+                    <img src="Images/Gallery/P10.JPG">
+                    <img src="Images/Gallery/P2.JPG">
+                    <img src="Images/Gallery/P5.JPG">
                 </div>
                 <div class="gallery-column">
-                    <img src="Images/Gallery/g4.JPG">
-                    <img src="Images/Gallery/g7.JPG">
-                    <img src="Images/Gallery/g8.JPG">
-                    <img src="Images/Gallery/g1.JPG">
-                    <img src="Images/Gallery/g6.JPG">
+                    <img src="Images/Gallery/P6.JPG">
+                    <img src="Images/Gallery/P7.JPG">
+                    <img src="Images/Gallery/P12.JPG">
+                    <img src="Images/Gallery/P17.JPG">
+                </div>
+                <div class="gallery-column">
+                    <img src="Images/Gallery/P11.JPG">
+                    <img src="Images/Gallery/P18.JPG">
+                    <img src="Images/Gallery/P13.JPG">
+                    <img src="Images/Gallery/P4.JPG">
                 </div> 
                 <div class="gallery-column">
-                    <img src="Images/Gallery/g10.JPG">
-                    <img src="Images/Gallery/g12.JPG">
-                    <img src="Images/Gallery/g5.JPG">
-                    <img src="Images/Gallery/g14.JPG">
-                    <img src="Images/Gallery/g15.JPG">
+                    <img src="Images/Gallery/P15.JPG">
+                    <img src="Images/Gallery/P16.JPG">
+                    <img src="Images/Gallery/P3.JPG">
+                    <img src="Images/Gallery/P9.JPG">
+                    <img src="Images/Gallery/P8.JPG">
                 </div>
             </div>
+            <div class="button-container">
+                <button class="gallery-button" onclick="showFourColumns()">4</button>         
+                <button class="gallery-button" onclick="showTwoColumns()">2</button>
+                <button class="gallery-button" onclick="showOneColumn()">1</button>
+            </div>   
         </section>
         <div class="bottom-blurred-bar"></div>
 
         <!-- Links to our fund and amazon gift selection -->
         <section id="gifts">
             <h2>Fund & Gifts</h2>
+            <img src="Images/Icons/money-bag.png" class="icons">
+            <img src="Images/Icons/presents.png" class="icons">
+            <p>
+                If you would like to help 
+            </p>
         </section>
 
         <!-- Allows an invitee to rsvp -->
