--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="quadrant">
                     <a href="https://www.hotelverdant.com" class="hotels">
                         <strong>
-                            -- Hotel Verdant --
+                            &nbsp;&nbsp;&nbsp;&nbsp;-- Hotel Verdant --&nbsp;&nbsp;&nbsp;&nbsp;
                         </strong>
                         <br><br>
                         ~6 minute drive
@@ -217,8 +217,8 @@
                 </div>
                 <div class="quadrant">
                     <a href="https://www.wyndhamhotels.com/travelodge/racine-wisconsin/travelodge-waters-edge-hotel-racine/overview" class="hotels">
-                            <strong>
-                            -- Water’s Edge Hotel --
+                        <strong>
+                            &nbsp;-- Water’s Edge Hotel --&nbsp;
                         </strong>
                         <br><br>
                         ~8 minute drive
