Began making changes to info

--- a/index.html
+++ b/index.html
@@ -86,37 +86,34 @@
                 <div class="color-quadrant" style="background: radial-gradient(#aec8e5, #fff);"></div>
                 <div class="color-quadrant" style="background: radial-gradient(#e0d5f3, #fff);"></div>
             </div>
-            <div class="large-screen">
-                <h3>
-                    Location | <span class="location-name">The Covenant at Murray Mansion</span>
-                </h3>
-            </div>
-            <div class="small-screen">
-                <h3>
-                    -Location-
-                </h3>
-                <h3 class="location-name">
-                    The Covenant at Murray Mansion
-                </h3>
-            </div>
+            <h3>
+                Location
+            </h3>
             <div class="location-container">
                 <p>
                     <strong>
-                        NOTE
+                        THE COVENANT AT MURRAY MANSION
                     </strong>
-                    <br><br>
-                    The ceremony and reception will be held at the same venue.
-                    <br><br><br>
+                    <br>
+                    <br>
+                    Both the ceremony and reception will be held here.
+                    <br>
+                    <br>
+                    <br>
                     <strong>
                         CEREMONY & RECEPTION ADDRESS
                     </strong>
-                    <br><br>
+                    <br>
+                    <br>
                     2219 Washington Ave, Racine, WI 53405
-                    <br><br><br>
+                    <br>
+                    <br>
+                    <br>
                     <strong>
                         PARKING
                     </strong>
-                    <br><br>
+                    <br>
+                    <br>
                     The parking lot enterance is on located off of Taylor Ave. In the event that the venue parking lot becomes full, there is free street parking available (Kearney Ave and Taylor Ave).
                 </p>
                 <div class="google-maps">
@@ -221,7 +218,7 @@
                 <tr>
                     <td>7:15</td>
                     <td>Cake Cutting Ceremony</td>
-                    <td>Gluten free options will be available.</td>
+                    <td>Gluten free dessert options will be available.</td>
                 </tr>
                 <tr>
                     <td>7:30</td>
