--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="./Styles/rsvp.css">
         
         <!-- For icons  -->
+        <link type="image/png" sizes="16x16" rel="icon" href="./Images/heart.png">
+        <link type="image/png" sizes="16x16" rel="shortcut icon" href="./Images/heart.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 
         <!-- Script upload -->
@@ -196,9 +198,9 @@
                     <td>Enter through the main doors on the south side of the venue where the parking lot is.</td>
                 </tr>
                 <tr>
-                <td>4:30</td>
-                <td>Ceremony</td>
-                <td>Officiated by</td>
+                    <td>4:30</td>
+                    <td>Ceremony</td>
+                    <td>Officiated by</td>
                 </tr>
                 <tr>
                     <td>5:00</td>
