--- a/index.html
+++ b/index.html
@@ -208,24 +208,9 @@
                     <td>Complementary drinks, Hors D'oeuvres, and music will be inside Murray Mansion.</td>
                 </tr>
                 <tr>
-                    <td>6:00</td>
-                    <td>Introductions</td>
-                    <td>General announcments.</td>
-                </tr>
-                <tr>
                     <td>6:30</td>
                     <td>Dinner</td>
-                    <td>Be prepared to give your best joke!</td>
-                </tr>
-                <tr>
-                    <td>7:15</td>
-                    <td>Cake Cutting Ceremony</td>
-                    <td>Gluten free dessert options will be available.</td>
-                </tr>
-                <tr>
-                    <td>7:30</td>
-                    <td>First Dances</td>
-                    <td></td>
+                    <td>Be prepared to give your <strong>best joke</strong>!</td>
                 </tr>
                 <tr>
                     <td>8:00</td>
@@ -233,13 +218,13 @@
                     <td>The DJ will accept music requests.</td>
                 </tr>
                 <tr>
-                    <td>11:00</td>
+                    <td>10:00</td>
                     <td>Bar Closes</td>
                     <td>Drink up!</td>
                 </tr>
                 <tr>
-                    <td>11:15</td>
-                    <td>Final Song</td>
+                    <td>11:00</td>
+                    <td>Final Songs</td>
                     <td></td>
                 </tr>
             </table>
@@ -307,8 +292,7 @@
         </section>
 
         <section id="rsvp">
-            <div class="form">
-                <iframe
+            <iframe
                 title="Kline Wedding RSVP"
                 onload="window.parent.scrollTo(0,0)"
                 allowtransparency="true"
@@ -316,14 +300,12 @@
                 allow="geolocation; microphone; camera"
                 src="https://form.jotform.com/233505734965059"
                 frameborder="0"
-                scrolling="no"
-                >
-              </iframe>
-            </div>
+                scrolling="no">
+            </iframe>
         </section>
 
         <footer>
-            &copy; Created by Zachariah and approved by Claire.
+            &copy; Created by Zachariah & approved by Claire.
         </footer>
     </body>
 </html>
